--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,32 @@
   <h1>Vijay</h1>
 </center>
 <hr>
+<p>
+
+Vijay in 2018
+President of the Tamilaga Vettri Kazhagam
+Incumbent
+Assumed office
+2 February 2024
+Preceded by	Position established
+Personal details
+Born	Joseph Vijay Chandrasekhar
+22 June 1974 (age 49)
+Madras, Tamil Nadu, India
+Political party	Tamilaga Vettri Kazhagam (2024‍–‍present)
+Spouse	Sangeeta ​(m. 1999)​
+Relations	See Chandrasekhar family
+Children	2
+Parents	
+S. A. Chandrasekhar (father)
+Shoba Chandrasekhar (mother)
+Residence(s)	Chennai, Tamil Nadu, India
+Occupation	
+Actorsinger
+Awards	Full list
+Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema. In a career spanning in just over 3 decades, Vijay has acted in over 65 films and is one of the most commercially successful actors in Tamil cinema with multiple films amongst the highest-grossing Tamil films of all time and is amongst the highest paid actors in India.
+
+Born in Madras to director S. A. Chandrasekhar, Vijay made his debut as a child actor in the Tamil film Vetri (1984). After a view roles as a child actor in his father’s films, he played his first lead role in the film Naalaiya Theerpu (1992) at the age of 18. Vijay continued doing lead roles for the next few years with mixed results, notable films amongst them included Poove Unakkaga, Love Today, Kadhalukku Mariyadhai, Thulladha Manamum Thullum and Kushi. In 1998, he was awarded Kalaimaamani by the Government of Tamil Nadu.
+
+In 2003, he starred in Ghilli, which became the first Tamil film to gross over ₹500 million and with subsequent success of Thirupaachi and Pokkiri later, he established himself as one of the leading and commercially successful actors in Tamil cinema. Following a period of moderate success, Vijay acted in various critically and commercially successful films starting in the late 2010s including Thuppakki, Kaththi and Sarkar. He has won several awards as an actor.
+</p>
